--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    // Memakai dependency FlatLaf untuk style GUI
+    implementation 'com.formdev:flatlaf:3.6.2'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -40,4 +43,8 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-native-access=ALL-UNNAMED"
 }
