--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@
 
 org.gradle.configuration-cache=true
 
-netbeans.hint.jdkPlatform=JDK_21
+#netbeans.hint.jdkPlatform=JDK_21
+org.gradle.java.home=/usr/lib/jvm/default
