fix gradlew for windows

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@
 org.gradle.configuration-cache=true
 
 #netbeans.hint.jdkPlatform=JDK_21
-org.gradle.java.home=/usr/lib/jvm/default
+#org.gradle.java.home=/usr/lib/jvm/default
